--- a/README
+++ b/README
@@ -1,4 +1,10 @@
-### Main dependencies:
+# Plotting fractals
+
+Planning to add more aside from the mandelbrot fractal. PM me if I'm lazy.
+
+![mandelbrot](https://github.com/AlexMetsai/fractals/blob/main/output/mandelbrot_fractal_960_540.png?raw=true)
+
+## Main dependencies:
 
 - Python 3.6
 - PIL 8.1.0
